# NovaDL

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORTED_SITES.md  novadl.py  pyproject.toml  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: ci.yml  release.yml
src/novadl/: __init__.py  __main__.py  cli.py  const.py  core.py  infra.py  ui.py
src/novadl/cli/: app.py  callbacks.py  commands.py  menu.py
src/novadl/core/entities/: media.py  playlist.py
src/novadl/core/interfaces/: downloader.py  repository.py
src/novadl/core/use_cases/: download.py  extract_info.py  update.py
src/novadl/infrastructure/config/: config_manager.py
src/novadl/infrastructure/downloader/: yt_dlp_downloader.py
src/novadl/infrastructure/history/: history_manager.py
src/novadl/infrastructure/system/: ffmpeg_checker.py
src/novadl/presentation/: console.py  display.py  progress.py
src/novadl/utils/: constants.py  exceptions.py  logger.py
tests/: test_config.py  test_ffmpeg.py  test_history.py
