[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "novadl"
version = "1.0.0"
description = "A powerful CLI downloader for video and audio from YouTube, TikTok, Instagram, and hundreds of other sites."
authors = ["B5t Alanzi <badr@alanzi.dev>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/B5d2z/NovaDL"
repository = "https://github.com/B5d2z/NovaDL"
documentation = "https://github.com/B5d2z/NovaDL#readme"
keywords = [
    "downloader",
    "video-downloader",
    "audio-downloader",
    "youtube-downloader",
    "yt-dlp",
    "tiktok-downloader",
    "instagram-downloader",
    "cli",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
novadl = "novadl.cli:main"

[tool.poetry.dependencies]
python = ">=3.8"
typer = ">=0.9.0"
rich = ">=13.0.0"
yt-dlp = ">=2024.12.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"

[tool.ruff]
target-version = "py38"
line-length = 100
exclude = ["__pycache__", ".git", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.format]
quote-style = "double"
